omq-zeromq/tests/trybuild/compat-fail/message_try_from_vecdeque_bytes.stderr
error[E0277]: the trait bound `ZmqMessage: TryFrom<VecDeque<bytes::Bytes>>` is not satisfied
 --> tests/trybuild/compat-fail/message_try_from_vecdeque_bytes.rs:9:16
  |
9 |     let _msg = ZmqMessage::try_from(frames).unwrap();
  |                ^^^^^^^^^^ the trait `From<VecDeque<bytes::Bytes>>` is not implemented for `ZmqMessage`
  |
help: the following other types implement trait `From<T>`
 --> src/message.rs
  |
  | impl From<String> for ZmqMessage {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ZmqMessage` implements `From<String>`
...
  | impl From<&str> for ZmqMessage {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ZmqMessage` implements `From<&str>`
...
  | impl From<Vec<u8>> for ZmqMessage {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ZmqMessage` implements `From<Vec<u8>>`
...
  | impl From<Bytes> for ZmqMessage {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ZmqMessage` implements `From<bytes::Bytes>`
  = note: required for `VecDeque<bytes::Bytes>` to implement `Into<ZmqMessage>`
  = note: required for `ZmqMessage` to implement `TryFrom<VecDeque<bytes::Bytes>>`

error[E0277]: the trait bound `ZmqMessage: From<VecDeque<bytes::Bytes>>` is not satisfied
 --> tests/trybuild/compat-fail/message_try_from_vecdeque_bytes.rs:9:16
  |
9 |     let _msg = ZmqMessage::try_from(frames).unwrap();
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<VecDeque<bytes::Bytes>>` is not implemented for `ZmqMessage`
  |
help: the following other types implement trait `From<T>`
 --> src/message.rs
  |
  | impl From<String> for ZmqMessage {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ZmqMessage` implements `From<String>`
...
  | impl From<&str> for ZmqMessage {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ZmqMessage` implements `From<&str>`
...
  | impl From<Vec<u8>> for ZmqMessage {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ZmqMessage` implements `From<Vec<u8>>`
...
  | impl From<Bytes> for ZmqMessage {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ZmqMessage` implements `From<bytes::Bytes>`
  = note: required for `VecDeque<bytes::Bytes>` to implement `Into<ZmqMessage>`
  = note: required for `ZmqMessage` to implement `TryFrom<VecDeque<bytes::Bytes>>`
